--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -22,15 +22,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Eyo Gist</a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
       </div>
     </nav>
   <!--[if lt IE 7]>
@@ -38,6 +31,41 @@
   <![endif]-->
     <div class="container">
     <div ng-view></div>
+        <div class="row">
+            <div class="col-md-4">
+            <h4>Please Log in</h4>
+                <button type="button" class="btn btn-default">Login</button>
+                <br />
+                <br />
+                <div class="well">
+                    <h4>User Info</h4>
+                    <ul>
+                        <li>ID: 34584</li>
+                        <li>First Name: Jake</li>
+                        <li>Last Name: Juice</li>
+                        <li>Email: juice@mail.com</li>
+                        <li>Gender: Male</li>
+                        <li>Locale: GH</li>
+                    </ul>
+                </div>
+                <div class="well">
+                <h4>Permissions</h4>
+                    <ul>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-8">
+            <h3>Welcome to Facebook</h3>
+                <form>
+                    <div class="form-group">
+                        <label>Status update</label>
+                        <textarea class="form-control"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div>
+        </div>
     </div>
 
   <!-- In production use:
