--- a/app/facebook/facebook.html
+++ b/app/facebook/facebook.html
@@ -1,1 +1,35 @@
-<h4>Eyioyo say's "Under Construction</h4>
+<div class="row">
+            <div class="col-md-4">
+            <h4>Please Log in</h4>
+                <button type="button" class="btn btn-default">Login</button>
+                <br />
+                <br />
+                <div class="well">
+                    <h4>User Info</h4>
+                    <ul>
+                        <li>ID: 34584</li>
+                        <li>First Name: Jake</li>
+                        <li>Last Name: Juice</li>
+                        <li>Email: juice@mail.com</li>
+                        <li>Gender: Male</li>
+                        <li>Locale: GH</li>
+                    </ul>
+                </div>
+                <div class="well">
+                <h4>Permissions</h4>
+                    <ul>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-8">
+            <h3>Welcome to Facebook</h3>
+                <form>
+                    <div class="form-group">
+                        <label>Status update</label>
+                        <textarea class="form-control"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div>
+        </div>
