--- a/app/facebook/facebook.html
+++ b/app/facebook/facebook.html
@@ -1,6 +1,6 @@
 <div class="row">
             <div class="col-md-4">
-            <h4>Please Log in</h4>
+            <h4>{{welcomeMsg}}</h4>
                 <button type="button" class="btn btn-default" ng-click="logIn()" >Login</button>
                 <br />
                 <br />
