add logout function for logout button

--- a/app/facebook/facebook.html
+++ b/app/facebook/facebook.html
@@ -4,7 +4,7 @@
                 <button type="button" class="btn btn-default" ng-click="logIn()" ng-hide="isLoggedIn" >Login</button>
                 <br />
                 <br />
-                <button type="button" class="btn btn-default" ng-click="logIn()" ng-show="isLoggedIn" >Logout</button>
+                <button type="button" class="btn btn-default" ng-click="logOut()" ng-show="isLoggedIn" >Logout</button>
                 <br />
                 <br />
                 <div class="well">
