--- a/app/facebook/facebook.html
+++ b/app/facebook/facebook.html
@@ -37,5 +37,15 @@
                     </div>
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
+                <br/><br/>
+                <div ng-repeat="post in posts" class="stbody">
+                    <div class="stimg">
+                        <img ng-src="{{picture}}">
+                    </div>
+                    <div class="sttext">
+                        {{post.messgae}}
+                        <div class="sttime">{{post.updated_time}}</div>
+                    </div>
+                </div>
             </div>
         </div>
