--- a/app/facebook/facebook.html
+++ b/app/facebook/facebook.html
@@ -34,7 +34,7 @@
             <form ng-submit="postStatus()">
                 <div class="form-group">
                     <label>Status update</label>
-                    <textarea class="form-control" ng-model="myPost"></textarea>
+                    <textarea class="form-control" ng-model="body"></textarea>
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
